context / field refactor