@@ -58,7 +58,7 @@ public final class Verify {
     // TODO: desc
     public static void checkEQ(Object a, Object b, boolean isFloatCheckWithRawBits, boolean isCheckWithArbitraryClasses) {
         Verify v = new Verify(isFloatCheckWithRawBits, isCheckWithArbitraryClasses);
-        v.checkX(a, b, "root", null, null);
+        v.checkEQdispatch(a, b, "<root>", null, null);
     }
 
     // recursive, so that we have nicer stack trace? - no need for map!
@@ -76,7 +76,7 @@ public final class Verify {
         checkEQ(a, b, false, false);
     }
 
-    private void checkX(Object a, Object b, String field, Object aParent, Object bParent) {
+    private void checkEQdispatch(Object a, Object b, String field, Object aParent, Object bParent) {
         // Both null
         if (a == null && b == null) {
             return;
@@ -103,30 +103,27 @@ public final class Verify {
         if (checkAlreadyVisited(a, b, field, aParent, bParent)) {
             return;
         }
-        // FIXME: continue here!
-
-        String context = "TODO rm";
 
         switch (a) {
-            case Object[]  x -> checkEQimpl(x, (Object[])b,                context);
-            case Byte      x -> checkEQimpl(x, ((Byte)b).byteValue(),      context);
-            case Character x -> checkEQimpl(x, ((Character)b).charValue(), context);
-            case Short     x -> checkEQimpl(x, ((Short)b).shortValue(),    context);
-            case Integer   x -> checkEQimpl(x, ((Integer)b).intValue(),    context);
-            case Long      x -> checkEQimpl(x, ((Long)b).longValue(),      context);
-            case Float     x -> checkEQimpl(x, ((Float)b).floatValue(),    context);
-            case Double    x -> checkEQimpl(x, ((Double)b).doubleValue(),  context);
-            case Boolean   x -> checkEQimpl(x, ((Boolean)b).booleanValue(),context);
-            case byte[]    x -> checkEQimpl(x, (byte[])b,                  context);
-            case char[]    x -> checkEQimpl(x, (char[])b,                  context);
-            case short[]   x -> checkEQimpl(x, (short[])b,                 context);
-            case int[]     x -> checkEQimpl(x, (int[])b,                   context);
-            case long[]    x -> checkEQimpl(x, (long[])b,                  context);
-            case float[]   x -> checkEQimpl(x, (float[])b,                 context);
-            case double[]  x -> checkEQimpl(x, (double[])b,                context);
-            case boolean[] x -> checkEQimpl(x, (boolean[])b,               context);
-            case MemorySegment x -> checkEQimpl(x, (MemorySegment) b,      context);
-            case Exception x -> checkEQimpl(x, (Exception) b,              context);
+            case Object[]  x -> checkEQimpl(x, (Object[])b,                 field, aParent, bParent);
+            case Byte      x -> checkEQimpl(x, ((Byte)b).byteValue(),       field, aParent, bParent);
+            case Character x -> checkEQimpl(x, ((Character)b).charValue(),  field, aParent, bParent);
+            case Short     x -> checkEQimpl(x, ((Short)b).shortValue(),     field, aParent, bParent);
+            case Integer   x -> checkEQimpl(x, ((Integer)b).intValue(),     field, aParent, bParent);
+            case Long      x -> checkEQimpl(x, ((Long)b).longValue(),       field, aParent, bParent);
+            case Float     x -> checkEQimpl(x, ((Float)b).floatValue(),     field, aParent, bParent);
+            case Double    x -> checkEQimpl(x, ((Double)b).doubleValue(),   field, aParent, bParent);
+            case Boolean   x -> checkEQimpl(x, ((Boolean)b).booleanValue(), field, aParent, bParent);
+            case byte[]    x -> checkEQimpl(x, (byte[])b,                   field, aParent, bParent);
+            case char[]    x -> checkEQimpl(x, (char[])b,                   field, aParent, bParent);
+            case short[]   x -> checkEQimpl(x, (short[])b,                  field, aParent, bParent);
+            case int[]     x -> checkEQimpl(x, (int[])b,                    field, aParent, bParent);
+            case long[]    x -> checkEQimpl(x, (long[])b,                   field, aParent, bParent);
+            case float[]   x -> checkEQimpl(x, (float[])b,                  field, aParent, bParent);
+            case double[]  x -> checkEQimpl(x, (double[])b,                 field, aParent, bParent);
+            case boolean[] x -> checkEQimpl(x, (boolean[])b,                field, aParent, bParent);
+            case MemorySegment x -> checkEQimpl(x, (MemorySegment) b,       field, aParent, bParent);
+            case Exception x -> checkEQimpl(x, (Exception) b,               field, aParent, bParent);
             default -> {
                 if (ca.getName().startsWith("jdk.incubator.vector") && ca.getName().contains("Vector")) {
                     // We do not want to import jdk.incubator.vector explicitly, because it would mean we would also have
@@ -145,7 +142,7 @@ public final class Verify {
                     } catch (InvocationTargetException e) {
                         throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
                     }
-                    checkEQ(va, vb, context);
+                    checkEQdispatch(va, vb, field + ".toArray", aParent, bParent);
                     return;
                 }
 
@@ -157,89 +154,12 @@ public final class Verify {
     }
 
     /**
-     * Verify the content of two Objects, possibly recursively. Only limited types are implemented.
-     */
-    private static void checkEQ(Object a, Object b, String context) {
-        // Both null
-        if (a == null && b == null) {
-            return;
-        }
-
-        // Null mismatch
-        if (a == null || b == null) {
-            System.err.println("ERROR: Verify.checkEQ failed: null mismatch");
-            print(a, "a " + context);
-            print(b, "b " + context);
-            throw new VerifyException("Object array null mismatch.");
-        }
-
-        // Class mismatch
-        Class ca = a.getClass();
-        Class cb = b.getClass();
-        if (ca != cb) {
-            System.err.println("ERROR: Verify.checkEQ failed: class mismatch.");
-            System.err.println("       " + ca.getName() + " vs " + cb.getName());
-            print(a, "a " + context);
-            print(b, "b " + context);
-            throw new VerifyException("Object class mismatch.");
-        }
-
-        switch (a) {
-            case Object[]  x -> checkEQimpl(x, (Object[])b,                context);
-            case Byte      x -> checkEQimpl(x, ((Byte)b).byteValue(),      context);
-            case Character x -> checkEQimpl(x, ((Character)b).charValue(), context);
-            case Short     x -> checkEQimpl(x, ((Short)b).shortValue(),    context);
-            case Integer   x -> checkEQimpl(x, ((Integer)b).intValue(),    context);
-            case Long      x -> checkEQimpl(x, ((Long)b).longValue(),      context);
-            case Float     x -> checkEQimpl(x, ((Float)b).floatValue(),    context);
-            case Double    x -> checkEQimpl(x, ((Double)b).doubleValue(),  context);
-            case Boolean   x -> checkEQimpl(x, ((Boolean)b).booleanValue(),context);
-            case byte[]    x -> checkEQimpl(x, (byte[])b,                  context);
-            case char[]    x -> checkEQimpl(x, (char[])b,                  context);
-            case short[]   x -> checkEQimpl(x, (short[])b,                 context);
-            case int[]     x -> checkEQimpl(x, (int[])b,                   context);
-            case long[]    x -> checkEQimpl(x, (long[])b,                  context);
-            case float[]   x -> checkEQimpl(x, (float[])b,                 context);
-            case double[]  x -> checkEQimpl(x, (double[])b,                context);
-            case boolean[] x -> checkEQimpl(x, (boolean[])b,               context);
-            case MemorySegment x -> checkEQimpl(x, (MemorySegment) b,      context);
-            case Exception x -> checkEQimpl(x, (Exception) b,              context);
-            default -> {
-                if (ca.getName().startsWith("jdk.incubator.vector") && ca.getName().contains("Vector")) {
-                    // We do not want to import jdk.incubator.vector explicitly, because it would mean we would also have
-                    // to add "--add-modules=jdk.incubator.vector" to the command-line of every test that uses the Verify
-                    // class. So we hack this via reflection.
-                    Object va = null;
-                    Object vb = null;
-                    try {
-                        Method m = ca.getMethod("toArray");
-                        va = m.invoke(a);
-                        vb = m.invoke(b);
-                    } catch (NoSuchMethodException e) {
-                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
-                    } catch (IllegalAccessException e) {
-                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
-                    } catch (InvocationTargetException e) {
-                        throw new RuntimeException("Could not invoke toArray on " + ca.getName(), e);
-                    }
-                    checkEQ(va, vb, context);
-                    return;
-                }
-
-                System.err.println("ERROR: Verify.checkEQ failed: type not supported: " + ca.getName());
-                print(a, "a " + context);
-                print(b, "b " + context);
-                throw new VerifyException("Object type not supported: " + ca.getName());
-            }
-        }
-    }
-
-    /**
      * Verify that two bytes are identical.
      */
-    private static void checkEQimpl(byte a, byte b, String context) {
+    private void checkEQimpl(byte a, byte b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -247,9 +167,10 @@ public final class Verify {
     /**
      * Verify that two chars are identical.
      */
-    private static void checkEQimpl(char a, char b, String context) {
+    private void checkEQimpl(char a, char b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + (int)a + " vs " + (int)b);
         }
     }
@@ -257,9 +178,10 @@ public final class Verify {
     /**
      * Verify that two shorts are identical.
      */
-    private static void checkEQimpl(short a, short b, String context) {
+    private void checkEQimpl(short a, short b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + (int)a + " vs " + (int)b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + (int)a + " vs " + (int)b);
         }
     }
@@ -267,9 +189,10 @@ public final class Verify {
     /**
      * Verify that two ints are identical.
      */
-    private static void checkEQimpl(int a, int b, String context) {
+    private void checkEQimpl(int a, int b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -277,9 +200,10 @@ public final class Verify {
     /**
      * Verify that two longs are identical.
      */
-    private static void checkEQimpl(long a, long b, String context) {
+    private void checkEQimpl(long a, long b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -291,11 +215,12 @@ public final class Verify {
      * of two NaN values should always return the first of the two). So we verify that we have the same bit
      * pattern in all cases, except for NaN we project to the canonical NaN, using Float.floatToIntBits.
      */
-    private static void checkEQimpl(float a, float b, String context) {
+    private void checkEQimpl(float a, float b, String field, Object aParent, Object bParent) {
         if (Float.floatToIntBits(a) != Float.floatToIntBits(b)) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch");
             System.err.println("       Values: " + a + " vs " + b);
             System.err.println("       Values: " + Float.floatToRawIntBits(a) + " vs " + Float.floatToRawIntBits(b));
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -303,11 +228,12 @@ public final class Verify {
     /**
      * Same as Float case, see above.
      */
-    private static void checkEQimpl(double a, double b, String context) {
+    private void checkEQimpl(double a, double b, String field, Object aParent, Object bParent) {
         if (Double.doubleToLongBits(a) != Double.doubleToLongBits(b)) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch");
             System.err.println("       Values: " + a + " vs " + b);
             System.err.println("       Values: " + Double.doubleToRawLongBits(a) + " vs " + Double.doubleToRawLongBits(b));
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -315,9 +241,10 @@ public final class Verify {
     /**
      * Verify that two booleans are identical.
      */
-    private static void checkEQimpl(boolean a, boolean b, String context) {
+    private void checkEQimpl(boolean a, boolean b, String field, Object aParent, Object bParent) {
         if (a != b) {
-            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b + " for " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: value mismatch: " + a + " vs " + b);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Value mismatch: " + a + " vs " + b);
         }
     }
@@ -326,15 +253,16 @@ public final class Verify {
      * Verify that the content of two MemorySegments is identical. Note: we do not check the
      * backing type, only the size and content.
      */
-    private static void checkEQimpl(MemorySegment a, MemorySegment b, String context) {
+    private void checkEQimpl(MemorySegment a, MemorySegment b, String field, Object aParent, Object bParent) {
         long offset = a.mismatch(b);
         if (offset == -1) { return; }
 
         // Print some general info
-        System.err.println("ERROR: Verify.checkEQ failed for: " + context);
+        System.err.println("ERROR: Verify.checkEQ failed");
 
-        printMemorySegment(a, "a " + context);
-        printMemorySegment(b, "b " + context);
+        printX(a, b, field, aParent, bParent);
+        printMemorySegment(a, "a");
+        printMemorySegment(b, "b");
 
         // (1) Mismatch on size
         if (a.byteSize() != b.byteSize()) {
@@ -352,7 +280,7 @@ public final class Verify {
      * Verify that the content of two MemorySegments is identical. Note: we do not check the
      * backing type, only the size and content.
      */
-    private static void checkEQimpl(Exception a, Exception b, String context) {
+    private void checkEQimpl(Exception a, Exception b, String field, Object aParent, Object bParent) {
         String am = a.getMessage();
         String bm = b.getMessage();
 
@@ -360,47 +288,46 @@ public final class Verify {
         if (am == null || bm == null) { return; }
         if (am.equals(bm)) { return; }
 
-        System.err.println("ERROR: Verify.checkEQ failed for: " + context);
+        System.err.println("ERROR: Verify.checkEQ failed:");
         System.out.println("a: " + a.getMessage());
         System.out.println("b: " + b.getMessage());
-        System.out.println(a);
-        System.out.println(b);
+        printX(a, b, field, aParent, bParent);
         throw new VerifyException("Exception message mismatch: " + a + " vs " + b);
     }
 
     /**
      * Verify that the content of two byte arrays is identical.
      */
-    private static void checkEQimpl(byte[] a, byte[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(byte[] a, byte[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two char arrays is identical.
      */
-    private static void checkEQimpl(char[] a, char[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(char[] a, char[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two short arrays is identical.
      */
-    private static void checkEQimpl(short[] a, short[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(short[] a, short[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two int arrays is identical.
      */
-    private static void checkEQimpl(int[] a, int[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(int[] a, int[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
      * Verify that the content of two long arrays is identical.
      */
-    private static void checkEQimpl(long[] a, long[] b, String context) {
-        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), context);
+    private void checkEQimpl(long[] a, long[] b, String field, Object aParent, Object bParent) {
+        checkEQimpl(MemorySegment.ofArray(a), MemorySegment.ofArray(b), field + " -> to MemorySegment", aParent, bParent);
     }
 
     /**
@@ -411,15 +338,17 @@ public final class Verify {
      * of two NaN values should always return the first of the two). So we verify that we have the same bit
      * pattern in all cases, except for NaN we project to the canonical NaN, using Float.floatToIntBits.
      */
-    private static void checkEQimpl(float[] a, float[] b, String context) {
+    private void checkEQimpl(float[] a, float[] b, String field, Object aParent, Object bParent) {
         if (a.length != b.length) {
-            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length + " " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Float array length mismatch.");
         }
 
         for (int i = 0; i < a.length; i++) {
             if (Float.floatToIntBits(a[i]) != Float.floatToIntBits(b[i])) {
-                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i] + " " + context);
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i]);
+                printX(a, b, field, aParent, bParent);
                 throw new VerifyException("Float array value mismatch " + a[i] + " vs " + b[i]);
             }
         }
@@ -429,15 +358,17 @@ public final class Verify {
      * Verify that the content of two double arrays is identical.
      * Same issue with NaN as above for floats.
      */
-    private static void checkEQimpl(double[] a, double[] b, String context) {
+    private void checkEQimpl(double[] a, double[] b, String field, Object aParent, Object bParent) {
         if (a.length != b.length) {
-            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length + " " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Double array length mismatch.");
         }
 
         for (int i = 0; i < a.length; i++) {
             if (Double.doubleToLongBits(a[i]) != Double.doubleToLongBits(b[i])) {
-                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i] + " " + context);
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i]);
+                printX(a, b, field, aParent, bParent);
                 throw new VerifyException("Double array value mismatch " + a[i] + " vs " + b[i]);
             }
         }
@@ -446,15 +377,17 @@ public final class Verify {
     /**
      * Verify that the content of two boolean arrays is identical.
      */
-    private static void checkEQimpl(boolean[] a, boolean[] b, String context) {
+    private void checkEQimpl(boolean[] a, boolean[] b, String field, Object aParent, Object bParent) {
         if (a.length != b.length) {
-            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length + " " + context);
+            System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Boolean array length mismatch.");
         }
 
         for (int i = 0; i < a.length; i++) {
             if (a[i] != b[i]) {
-                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i] + " " + context);
+                System.err.println("ERROR: Verify.checkEQ failed: value mismatch at " + i + ": " + a[i] + " vs " + b[i]);
+                printX(a, b, field, aParent, bParent);
                 throw new VerifyException("Boolean array value mismatch.");
             }
         }
@@ -464,24 +397,17 @@ public final class Verify {
      * Verify that the content of two Object arrays is identical, recursively:
      * every element is compared with checkEQimpl for the corresponding type.
      */
-    private static void checkEQimpl(Object[] a, Object[] b, String context) {
+    private void checkEQimpl(Object[] a, Object[] b, String field, Object aParent, Object bParent) {
         // (1) Length mismatch
         if (a.length != b.length) {
             System.err.println("ERROR: Verify.checkEQ failed: length mismatch: " + a.length + " vs " + b.length);
+            printX(a, b, field, aParent, bParent);
             throw new VerifyException("Object array length mismatch.");
         }
 
         for (int i = 0; i < a.length; i++) {
             // Recursive checkEQ call.
-            checkEQ(a[i], b[i], "[" + i + "]" + context);
-        }
-    }
-
-    private static void print(Object a, String context) {
-        if (a == null) {
-            System.err.println("  " + context + ": null");
-        } else {
-            System.err.println("  " + context + ": " + a);
+            checkEQdispatch(a[i], b[i], "[" + i + "]", a, b);
         }
     }
 
@@ -494,6 +420,7 @@ public final class Verify {
     }
 
     private boolean checkAlreadyVisited(Object a, Object b, String field, Object aParent, Object bParent) {
+        // TODO: must also check reverse direction?
         Integer id = a2id.get(a);
         if (id == null) {
             // Record for next time.
@@ -514,9 +441,9 @@ public final class Verify {
         }
     }
 
-    private static void printMemorySegment(MemorySegment a, String context) {
+    private void printMemorySegment(MemorySegment a, String name) {
         Optional<Object> maybeBase = a.heapBase();
-        System.err.println("  " + context + " via MemorySegment:");
+        System.err.println("  MemorySegment " + name + ":");
         if (maybeBase.isEmpty()) {
             System.err.println("    no heap base (native).");
         } else {
@@ -527,7 +454,7 @@ public final class Verify {
         System.err.println("    byteSize: " + a.byteSize());
     }
 
-    private static void printMemorySegmentValue(MemorySegment a, long offset, int range) {
+    private void printMemorySegmentValue(MemorySegment a, long offset, int range) {
         long start = Long.max(offset - range, 0);
         long end   = Long.min(offset + range, a.byteSize());
         for (long i = start; i < end; i++) {
